--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "joi": "^17.5.0",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
-        "moment-timezone": "^0.5.34",
+        "moment-timezone": "^0.5.45",
         "mysql2": "^2.3.3",
         "nest-winston": "^1.6.2",
         "nestjs-i18n": "^8.2.2",
@@ -86,6 +86,6 @@
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "tsconfig-paths": "^3.12.0",
-        "typescript": "^4.3.5"
+        "typescript": "^5.5.0-dev.20240513"
     }
 }
