--- a/package.json
+++ b/package.json
@@ -86,6 +86,6 @@
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "tsconfig-paths": "^3.12.0",
-        "typescript": "^5.5.0-dev.20240513"
+        "typescript": "4.6.2"
     }
 }
