--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,7 +51,7 @@ jobs:
 
             # Login against a Docker registry except on PR
             # https://github.com/docker/login-action
-            - name: Log into registry ${{ env.REGISTRY }} ${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_PASSWORD }}
+            - name: Log into registry ${{ env.REGISTRY }} - credentials  ${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_PASSWORD }}
               if: github.event_name != 'pull_request'
               uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
               with:
