--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,7 +19,7 @@ env:
     # Use docker.io for Docker Hub if empty
     REGISTRY: dtluat259
     # github.repository as <account>/<repo>
-    IMAGE_NAME: restaurant-app
+    IMAGE_NAME: dtluat259/restaurant-app
 
 jobs:
     build:
@@ -55,7 +55,6 @@ jobs:
               if: github.event_name != 'pull_request'
               uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
               with:
-                  registry: ${{ env.REGISTRY }}
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
