--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -85,6 +85,6 @@ jobs:
         runs-on: self-hosted
         steps:
             - name: Down old containers
-              run: docker compose down -f docker-compose.deployment.yml
+              run: docker compose -f docker-compose.deployment.yml down
             - name: Pull image and run from dockerhub
-              run: docker compose up -f docker-compose.deployment.yml
+              run: docker compose -f docker-compose.deployment.yml up
