--- a/docker-compose.deployment.yml
+++ b/docker-compose.deployment.yml
@@ -3,8 +3,7 @@ services:
     app:
         container_name: restaurantApp
         restart: always
-        env_file:
-            - .env
+        env_file: .env
         image: 'dtluat259/restaurant-app:main'
         ports:
             - '3000:${PORT}'
