--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -120,7 +120,15 @@ jobs:
                   file_name: .env
                   fail_on_empty: false
                   sort_keys: false
+
+            - name: Log into registry ${{ env.REGISTRY }} - credentials  ${{ secrets.DOCKER_USERNAME }} ${{ secrets.DOCKER_PASSWORD }}
+              if: github.event_name != 'pull_request'
+              uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+              with:
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
+
             - name: Down old containers
-              run: docker compose -f docker-compose.deployment.yml down
+              run: sudo docker compose -f docker-compose.deployment.yml down
             - name: Pull image and run from dockerhub
-              run: docker compose -f docker-compose.deployment.yml up
+              run: sudo docker compose -f docker-compose.deployment.yml up
