--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         env_file:
             - .env
         build: ./
-        image: 'dtluat259/restaurant-app:latest'
+        image: 'dtluat259/restaurant-app:main'
         ports:
             - '3000:${PORT}'
         depends_on:
