--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -131,4 +131,4 @@ jobs:
             - name: Down old containers
               run: sudo docker compose -f docker-compose.deployment.yml down
             - name: Pull image and run from dockerhub
-              run: sudo docker compose -f docker-compose.deployment.yml up
+              run: sudo docker compose -f docker-compose.deployment.yml up -d
