--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -129,6 +129,6 @@ jobs:
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
             - name: Down old containers
-              run: sudo docker compose -f docker-compose.deployment.yml down
+              run: sudo docker compose -f docker-compose.deployment.yml down restaurantApp
             - name: Pull image and run from dockerhub
               run: sudo docker compose -f docker-compose.deployment.yml up -d
