--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -127,6 +127,8 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Pull image from dockerhub
+              run: sudo docker compose -f docker-compose.deployment.yml pull app
 
             - name: Down old containers
               run: sudo docker compose -f docker-compose.deployment.yml down app
